fix(waybar): Missing color definitions

--- a/subflakes/hm/modules/de/waybar.css
+++ b/subflakes/hm/modules/de/waybar.css
@@ -4,6 +4,7 @@
 
 window#waybar, tooltip {
     color: @base05;
+    background: @base00;
 }
 
 tooltip {
@@ -16,6 +17,11 @@ tooltip label {
 
 #workspaces button {
     border-bottom: none;
+    color: @base05;
+}
+
+#workspaces button:hover {
+    color: @base00;
 }
 
 #workspaces button.focused {
